# xla_lite

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
hloport/models/: types.py
tests/: test_executor.py  test_graph.py  test_graph_builder.py  test_graph_viz.py  test_ops.py  test_tensor.py
tests/optimizers/: test_common_subexpression_elimination.py  test_constant_folding.py  test_dead_code_elimination.py
xla_lite/core/: __init__.py  graph.py  ops.py  tensor.py
xla_lite/execution/: executor.py
xla_lite/frontend/: __init__.py  builder.py
xla_lite/optimizers/: __init__.py  base.py  common_subexpression_elimination.py  constant_folding.py  dead_code_elimination.py
xla_lite/stubs/: graphviz.pyi
xla_lite/utils/: __init__.py  validators.py
xla_lite/visualization/: __init__.py  graph_viz.py
