[tool.poetry]
name = "xla_lite"
version = "0.1.0"
description = ""
authors = ["camille-004 <dunningcamille@gmail.com>"]
readme = "README.md"
packages = [{include = "xla_lite"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
pydantic = "^2.9.2"
graphviz = "^0.20.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
mypy = "^1.10.0"
pre-commit = "^3.7.1"

[tool.ruff]
line-length = 79
lint.select = ["E", "F", "I", "A", "C"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
